// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> #render() ModalWrapper centered 1`] = `
.c0 {
  overflow: scroll;
  z-index: 999999;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  max-height: calc(100% - 100px);
}

<div
  class="c0"
/>
`;

exports[`<Modal /> #render() default without props defined 1`] = `
<body>
  <div />
  .c0 {
  overflow: scroll;
  z-index: 999999;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.6875rem;
  line-height: 1.2;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  font-weight: bold;
  color: white;
  height: 3rem;
  position: fixed;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 {
  width: 100%;
  margin: 0;
  font-weight: normal;
  font-size: 0.875rem;
  line-height: 3.5;
  color: white;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  text-align: center;
}

<div
    class="c0"
    data-testid="modal-wrapper"
  >
    <div
      class="c1"
    >
      <h2
        class="c2"
        data-testid="modal-header"
      >
        Who is a modal?
      </h2>
    </div>
    I am a modal
  </div>
</body>
`;

exports[`<Modal /> #render() is it a sidepanel? 1`] = `
.c0 {
  overflow: scroll;
  z-index: 999999;
  position: fixed;
  top: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.6875rem;
  line-height: 1.2;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  font-weight: bold;
  color: white;
  height: 3rem;
  position: fixed;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 {
  width: 3rem;
  height: 3rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.25rem;
  cursor: pointer;
  float: right;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="modal-wrapper"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        data-testid="modal-close"
      >
        <svg
          fill="none"
          height="32"
          stroke="#ebcb80"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </div>
    </div>
    I am a modal
  </div>
</body>
`;
